@@ -1,6 +1,6 @@
 % File src/library/base/man/Primitive.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2010 R Core Development Team
+% Copyright 1995-2012 R Core Development Team
 % Distributed under GPL 2 or later
 
 \name{Primitive}
@@ -30,6 +30,10 @@
   \code{\link{get}(name, envir=baseenv())} work equally well and do
   not depend on knowing which functions are primitive (which does change
   as \R evolves).
+}
+\note{
+  Prior to \R 2.14.2 this could also be used to retrieve
+  \code{\link{.Internal}} functions: this was unintentional.
 }
 \seealso{
   \code{\link{.Internal}}.
